# exportdoctor

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
.github/workflows/: release.yml
license-worker/: package.json  wrangler.toml
license-worker/src/: index.ts  stripe.ts  types.ts
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  license.rs  main.rs
src/components/: AboutDialog.tsx  AnalysisProgress.tsx  ComplianceChecks.tsx  ExportButtons.tsx  FfprobeStatus.tsx  FileDropZone.tsx  LicenseGate.tsx  MetadataGrid.tsx  PlatformCard.tsx  PlatformSpecs.tsx  PresetPicker.tsx  Recommendations.tsx  ScoreGauge.tsx  SubscriptionDialog.tsx  UpdateChecker.tsx
src/components/icons/: CategoryIcon.tsx  PlatformIcon.tsx
src/lib/: license.ts  types.ts
src/lib/rules/: evaluate.ts  platformSpecs.ts
