[package]
name = "export-doctor"
version = "1.0.0"
description = "Local video export compliance analyzer"
authors = ["Export Doctor"]
edition = "2021"

[lib]
name = "export_doctor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-fs = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-store = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
sha2 = "0.10"
hostname = "0.4"
whoami = "1"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
